--- a/src/main/resources/io/sourcy/jirastatscollector/application.properties.example
+++ b/src/main/resources/io/sourcy/jirastatscollector/application.properties.example
@@ -15,3 +15,4 @@ jira_password=some password
 jira_url=https://jira.yourcompany.com/rest/api/latest/search?jql=cf[10006]=%s
 git_repository=/home/user/development/repo
 epics=ISSUE-123
+epic_custom_field=cf[10147]
